--- a/package.json
+++ b/package.json
@@ -6,6 +6,10 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/HandsomeWeeb5/pt-aura-cantik.git"
+  },
   "author": "Farhan Tri B",
   "license": "ISC",
   "dependencies": {
