--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.0.2",
+    "clocklet": "^0.3.0",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mariadb": "^3.0.0",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "timepicker.js": "^3.1.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.16"
