--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "server.js",
   "scripts": {
     "dev": "nodemon server.js",
-    "test db" : "node dbconfig.js"
+    "test" : "node server.js"
   },
   "repository": {
     "type": "git",
