--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "NodeJS, Express, Svelte (Framework), SQL (MariaDB), Apache with XAMPP",
   "main": "server.js",
   "scripts": {
-    "dev": "nodemon server.js",
-    "test" : "node server.js"
+    "dev": "nodemon app.js",
+    "test": "node app.js"
   },
   "repository": {
     "type": "git",
@@ -17,13 +17,12 @@
     "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.0.2",
-    "clocklet": "^0.3.0",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "mariadb": "^3.0.0",
     "morgan": "^1.10.0",
+    "mysql2": "^2.3.3",
     "timepicker.js": "^3.1.0"
   },
   "devDependencies": {
