--- a/package.json
+++ b/package.json
@@ -14,15 +14,18 @@
   "author": "Farhan Tri B",
   "license": "ISC",
   "dependencies": {
-    "axios": "^0.27.2",
     "body-parser": "^1.20.0",
     "bootstrap": "^5.0.2",
+    "connect-ensure-login": "^0.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
+    "express-session": "^1.17.3",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "timepicker.js": "^3.1.0"
   },
   "devDependencies": {
