--- a/package.json
+++ b/package.json
@@ -14,14 +14,16 @@
   "author": "Farhan Tri B",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.20.0",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.0.2",
-    "connect-ensure-login": "^0.1.1",
+    "connect-flash": "^0.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "express-validator": "^6.14.1",
     "morgan": "^1.10.0",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
