--- a/package.json
+++ b/package.json
@@ -22,10 +22,11 @@
     "dotenv": "^16.0.1",
     "ejs": "^3.1.8",
     "express": "^4.18.1",
-    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "express-validator": "^6.14.1",
+    "jquery": "^3.6.0",
     "morgan": "^1.10.0",
+    "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
